# smart-trading-bot

./: .dockerignore  .env.backup  .gitignore  API.md  CANDLE_PRELOAD_README.md  DEBUG.md  DEVELOPER_CHEATSHEET.md  Dockerfile  Dockerfile.debug  ETH_SMC_DEBUG_SOLUTION.md  INFRASTRUCTURE.md  PYTHON_BINANCE_INTEGRATION.md  README.md  README.uk.md  SECURITY.md  SIMULATION_ENGINE.md  SMC_CONFIGURATION_README.md  SMC_STRATEGY_UPGRADE_PLAN.md  SMC_UI_IMPLEMENTATION_PLAN.md  TESTING.md  config.example.env  conftest.py  data_preprocessor.py  debug_eth_smc.py  docker-compose.dev-full.yml  docker-compose.dev.yml  docker-compose.yml  env.example  eth_smc_config.py  fixed_smc_strategy.py  install_dev.py  pyproject.toml  requirements.txt  setup.py  test_fixed_strategy.py  test_smc_diagnostic.py  test_smc_strategy.py  test_view_only_mode.py  trading_bot_spec.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/endpoints/: backtest.py  candles.py  pairs.py  signals.py  trading.py  volatility.py
app/models/: __init__.py  backtest.py  candle.py  order.py  position.py  signal.py
app/services/: __init__.py  backtest_engine.py  binance_client.py  smc_engine.py
app/storage/: __init__.py  cache_manager.py  parquet_storage.py
app/utils/: __init__.py  trading_state.py
app/web/: __init__.py
app/web/endpoints/: __init__.py  backtest.py  dashboard.py  settings.py
app/web/templates/: backtest.html  base.html  dashboard.html  settings.html
app/workers/: __init__.py  websocket_worker.py
configs/smc_presets/: aggressive.json  conservative.json  custom.json  scalping.json
data/: app.db-shm  app.db-wal
examples/: README.md  REAL_DATA_DEMO_README.md  __main__.py  backtest_demo.py  basic_smc_demo.py  data_layer_demo.py  download_data_demo.py  download_data_python_binance_demo.py  minimal_real_data_demo.py  multi_symbol_demo.py  simple_real_data_demo.py  simulation_demo.py  smc_config_demo.py  smc_signal_demo.py  strategy_demo.py
scripts/: debug-build.sh  deploy.sh  dev.sh  start-backend.sh  start-frontend.sh
src/: logging_config.py  startup.py
src/api/: README.md  __init__.py  dependencies.py  main.py  middleware.py  schemas.py
src/api/routers/: backtests.py  markets.py  notifications.py  orders.py  pairs.py  settings.py  signals.py  simulation.py  status.py  strategies.py
src/backtests/: README.md  __init__.py  cli.py  integrity.py  metrics.py  models.py  preparation.py  runner.py  storage.py
src/config/: __init__.py  trading.py
src/data/: README.md  binance_client.py  binance_client_new.py  downloader.py  downloader_new.py  feed.py  pair_validator.py  rate_limit.py  stream.py  validators.py
src/orders/: __init__.py  adapters.py  pending.py  queue.py  sizing.py  types.py
src/simulation/: README.md  __init__.py  config.py  engine.py  portfolio.py
src/storage/: __init__.py  configs.py  db.py  files.py  migrations.py  pairs_service.py  simulation.py
src/strategies/: README.md  SMC_SIGNAL_README.md  __init__.py  base.py  registry.py  simple_test.py  smc.py  smc_config.py  smc_signal.py
tests/: conftest.py  test_api.py  test_backtest_runner_integration.py  test_backtests.py  test_backtests_basic.py  test_backtests_multi_timeframe.py  test_data_layer.py  test_data_preparation.py  test_markets_router.py  test_orders.py  test_python_binance_integration.py  test_schemas_multi_timeframe.py  test_simulation.py  test_storage.py  test_strategies.py  test_strategies_router.py
web/: DEV_SETUP.md  README.md  UI_SETUP.md  env.development  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ApiTest.tsx  Backtests.tsx  Dashboard.tsx  ErrorBoundary.tsx  Layout.tsx  SMCConfiguration.tsx  Settings.tsx
web/src/services/: api.ts
web/src/types/: api.ts
